# fpr-cli

./: Cargo.toml  README.md  config.json
cli-derive/: Cargo.toml
cli-derive/src/: lib.rs
derives/: Cargo.toml
derives/src/: acts.rs  args.rs  lib.rs
fpr-cli-derives/: Cargo.toml
fpr-cli-derives/src/: args.rs
sh/: Cargo.toml  build.rs
sh/script/: test.sh  test2.sh
sh/script/win/: test3.sh
sh/src/: lib.rs
sh_gen/: Cargo.toml
sh_gen/src/: main.rs
src/: a.rs  cl.rs  cl2.rs  i.rs  internal.rs  lib.rs  parse.rs  test.rs  util.rs
