[package]
name = "fpr-cli"
version = "0.1.8"
authors = ["Shinji Hoshino <funny.pig.run@gmail.com>"]
description = "A library that allows one to write cli tools quickly."
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/shinjitumala/fpr-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
unicode-width = "0.2.0"
inquire = "0.7.5"
