[package]
name = "fpr-cli"
version = "0.3.0"
authors = ["Shinji Hoshino <funny.pig.run@gmail.com>"]
description = "A library that allows one to write cli tools quickly."
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/shinjitumala/fpr-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
unicode-width = "0.2.0"
inquire = "0.7.5"
fuzzy-matcher = "0.3.7"
shellexpand = "3.1.0"
chrono = "0.4.38"
