[lib]
proc-macro = true

[package]
name = "fpr-cli-derives"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
darling = "0.20.8"
quote = "1.0.35"
syn = "2.0.57"
